@@ -4,6 +4,9 @@ this repository contains the full copyright notices and license terms. -->
 <tree editable="bottom">
     <field name="from_date"/>
     <field name="to_date"/>
-    <field name="gross_salary"/>
-    <field name="salary_bonus"/>
+    <field name="gross_salary" sum="Total Gross Salary" highlight_sum="1"/>
+    <field name="salary_bonus" sum="Total Bonus Salary" highlight_sum="1"/>
+    <field name="net_limit_mode" tree_invisible="1"/>
+    <field name="is_readonly" tree_invisible="1"/>
+    <field name="color" tree_invisible="1"/>
 </tree>
