@@ -1,3 +1,4 @@
+* FEA#8374 Amélioration du wizard de saisie des salaires
 * BUG#7792 Autoriser la suppression de périodes dans l'assistant des salaires
 
 Version 1.14 - 2017-11-09
