@@ -1,3 +1,4 @@
+* FEA#8374 Claim salaries data input improvement
 * BUG#7792 Allow deleting periods in claim salary wizard
 
 Version 1.14 - 2017-11-09
